--- a/views/bookmarks.erb
+++ b/views/bookmarks.erb
@@ -9,7 +9,7 @@
 <body>
     <ul>
     <% @bookmarks.each do |bookmark| %>
-        <li><%= bookmark %></li>
+        <li><%= bookmark[:url] %></li>
     <% end %>
     </ul>
     
